# cycle-DAFormer

./: INFO  README.md  pyproject.toml  requirements.txt  run_experiments.py
configs/_base_/: default_runtime.py
configs/daformer/: gta2cs_uda_cycle_dacs_daformer_mitb5_s0.py  gta2cs_uda_cycle_dacs_daformer_mitb5_s0_ablation_alllevels_balanced.py  gta2cs_uda_cycle_dacs_daformer_mitb5_s0_ablation_alllevels_light.py  gta2cs_uda_cycle_dacs_daformer_mitb5_s0_ablation_alllevels_strong_noadv.py  gta2cs_uda_cycle_dacs_daformer_mitb5_s0_ablation_baseline_guard.py  gta2cs_uda_cycle_dacs_daformer_mitb5_s0_ablation_level3_balanced.py  gta2cs_uda_cycle_dacs_daformer_mitb5_s0_ablation_levels012_balanced.py  gta2cs_uda_cycle_dacs_daformer_mitb5_s0_ablation_levels23_balanced.py  gta2cs_uda_cycle_dacs_daformer_mitb5_s0_ablation_levels23_fadv.py  gta2cs_uda_cycle_dacs_daformer_mitb5_s0_ablation_levels23_fadv005.py  gta2cs_uda_cycle_dacs_daformer_mitb5_s0_ablation_levels23_fadv02.py  gta2cs_uda_cycle_dacs_daformer_mitb5_s0_ablation_levels23_light.py  gta2cs_uda_cycle_dacs_daformer_mitb5_s0_ablation_levels23_src_trans.py  gta2cs_uda_cycle_dacs_daformer_mitb5_s0_ablation_levels23_tc05_thr08.py  (+4 more)
demo/: image_demo.py
mmseg/apis/: inference.py  (+2 more)
tests/: conftest.py  test_checkpoint_contract.py  test_checkpoint_load.py  test_cycle_dacs.py  test_cycle_losses_modules.py  test_dacs_train_step.py  test_encoder_load.py  test_eval_guard.py  test_gta2cs_miou.py  test_mmcv_shim_contract.py  test_model_forward.py  test_train_smoke.py
tools/: get_param_count.py  print_config.py  test.py  train.py
(+66 files in other folders)
