[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "cycle-daformer"
version = "0.16.0"
description = "DAFormer UDA semantic segmentation (mmcv-free fork)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cityscapesscripts>=2.2.0",
    "kornia>=0.7.0",
    "matplotlib>=3.8.0",
    "numpy>=1.26.0",
    "opencv-python>=4.8.0",
    "pandas>=2.0.0",
    "Pillow>=10.0.0",
    "prettytable>=3.0.0",
    "PyYAML>=6.0",
    "scipy>=1.11.0",
    "timm>=1.0.0",
    "torch>=2.2.0",
    "torchvision>=0.17.0",
    "tqdm>=4.66.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "requires_gpu: needs CUDA",
    "requires_data: needs DAFORMER_DATA_ROOT datasets",
    "slow: long-running eval",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::UserWarning",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["mmseg*"]
